Added Domain Model information in text, Includes classes and domain names

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -951,10 +951,64 @@
 		
 		\subsection{Domain Model}\label{subsec:domainmodel}
 		The domain model is described in terms of class diagram.\\ Class diagrams contain information on the current class such as attributes and relationships to other classes.
-			%\begin{figure}[h]
-			%\includegraphics[width=4in]{imagename}
-			%\caption{Figure information}
-			%\end
+			\begin{figure}[h]
+			%INSERT FIGURE NAME HERE
+				%\includegraphics[width=4in]{imagename}
+				\caption{ Domain model - Classes related to each domain }
+			\end{figure}
+			
+		Domains include :
+			\begin{itemize} 
+				\item \textbf{User:}
+					\begin{itemize}
+					\item Classes:
+						\begin{itemize}
+						\item User
+						\item Admin
+						\item Research Leader
+						\item Head Of Department
+						\item Super User
+						\end{itemize}
+					\end{itemize}
+					
+				\item \textbf{Authentication:}
+					\begin{itemize}
+					\item Classes:
+						\begin{itemize}
+						\item User Authentication
+						\item Publication Authentication
+						\end{itemize}
+					\end{itemize}
+					
+				\item \textbf{Reports:}
+					\begin{itemize}
+					\item { Classes:}
+						\begin{itemize}
+						\item Report
+						\end{itemize}
+					\end{itemize}
+					
+				\item \textbf{Notifications:}
+					\begin{itemize}
+					\item { Classes:}
+						\begin{itemize}
+						\item System
+						\item Notification
+						\end{itemize}
+					\end{itemize}
+					
+				\item \textbf{Publication:}
+					\begin{itemize}
+					\item { Classes:}
+						\begin{itemize}
+						\item Publication
+						\item Conference
+						\item Units
+						\item Author
+						\end{itemize}
+					\end{itemize}				
+				
+			\end{itemize}
 		
 	\cleardoublepage
 	\section{Open Issues}\label{sec:issues}
