Updated domainmodel formatting

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -952,12 +952,12 @@
 		\subsection{Domain Model}\label{subsec:domainmodel}
 		The domain model is described in terms of class diagram.\\ Class diagrams contain information on the current class such as attributes and relationships to other classes.
 			\begin{figure}[h]
-			%INSERT FIGURE NAME HERE
+				%INSERT FIGURE NAME HERE
 				%\includegraphics[width=4in]{imagename}
 				\caption{ Domain model - Classes related to each domain }
 			\end{figure}
 			
-		Domains include :
+		\textbf{Domains include :}
 			\begin{itemize} 
 				\item \textbf{User:}
 					\begin{itemize}
