Added domain model image to SoftwareRequirement

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -953,10 +953,11 @@
 		The domain model is described in terms of class diagram.\\ Class diagrams contain information on the current class such as attributes and relationships to other classes.
 			\begin{figure}[h]
 				%INSERT FIGURE NAME HERE
-				%\includegraphics[width=4in]{imagename}
+				\includegraphics[width=\linewidth]{../Diagrams/domainModel.jpg}
 				\caption{ Domain model - Classes related to each domain }
 			\end{figure}
 			
+			\clearpage
 		\textbf{Domains include :}
 			\begin{itemize} 
 				\item \textbf{User:}
