Added architectural constraints to main Tex file

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -190,9 +190,13 @@
 		
 		\subsection{Architecture Constraints}\label{subsec:constraints}
 			\begin{itemize}
-			  \item The first item
-			  \item The second item
-			  \item The third etc \ldots
+				\item The system will be a web based program accessible via browser with an API for Android access.
+			  	\item The system may not be browser or operating system specific, and should be able to run on any system chosen.
+			  	\item The system should be handled locally and should not rely on outside internet sources in order to function.
+		  		\item The database used must be a relational database as the information being stored requires both a standard structure as well as relations on fields.
+		  		\item Modules must be decoupled as far as possible, allowing as much pluggability and further editing as need be when the system grows larger.
+	  			\item A proper framework such as Django will probably be used in favour of a standard PHP approach during the program's design.
+	  			\item The technology used may not be proprietary and should be free and available to use for all.
 			\end{itemize}
 		
 	\cleardoublepage
