Added random name to the project for documentations sake

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -31,7 +31,7 @@
 			[2mm]
 			\line(1,0){200}\\
 			[15mm]
-			\textsc{\large (Name of System)}\\
+			\textsc{\large P.A.P.E.R.S (Publication And Papers Electronic Repository System)}\\
 			[7.5mm]
 			\textsc{\large University of Pretoria - Team Charlie}\\
 			[20mm]
@@ -62,7 +62,7 @@
 	\setcounter{page}{1}
 	\section{Introduction}\label{sec:intro}
 		\subsection{Purpose}\label{subsec:purpose}
-			The purpose of this document is to give a detailed explanation and description of the [Name] system. This document will illustrate the purpose as well as the features of said system, the interfaces of the system, the functionality of the system, the constraints under which it must operate and how the system will integrate with external systems. This document has been created for use by the developers of the system, the proposed client as well as any other additional third party collaborators who require to understand the software specifications of the [Name] system.
+			The purpose of this document is to give a detailed explanation and description of the P.A.P.E.R.S system. This document will illustrate the purpose as well as the features of said system, the interfaces of the system, the functionality of the system, the constraints under which it must operate and how the system will integrate with external systems. This document has been created for use by the developers of the system, the proposed client as well as any other additional third party collaborators who require to understand the software specifications of the P.A.P.E.R.S system.
 		
 	\cleardoublepage	
 	\section{Vision}\label{sec:vision}
