Added a link in pdf
I've added the link to the Team Charlie Repository in the tex document.

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -2,6 +2,7 @@
 
 \usepackage[margin=2.5cm,left=2cm,includefoot]{geometry}
 \usepackage{graphicx}
+\usepackage{hyperref}
 
 % Header and footer
 \usepackage{fancyhdr}
@@ -46,9 +47,12 @@
 				Bernhard Schuld - 10297902\\
 				Keorapetse Shiko - 12231992
 			}\\
-			[6cm]
-		\end{center}
-		
+			[4cm]
+
+		\textsc{\Large GitHub Repository - Team Charlie}\\[2mm]
+		  For more information, please click \href{https://github.com/DillonHeins/Charlie}{here}
+			
+		\end{center}	
 		\begin{flushright}
 			\textsc{\large 17 February 2016}
 		\end{flushright}
