Added a package to the tex file in order to allow file directories to have spaces in them. This was needed because of the directory changes in the Diagrams folder.

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -2,6 +2,7 @@
 
 \usepackage[margin=2.5cm,left=2cm,includefoot]{geometry}
 \usepackage{graphicx}
+\usepackage[space]{grffile}
 \usepackage{hyperref}
 
 % Header and footer
@@ -960,8 +961,8 @@
 		\subsection{Domain Model}\label{subsec:domainmodel}
 		The domain model is described in terms of class diagram.\\ Class diagrams contain information on the current class such as attributes and relationships to other classes.
 			\begin{figure}[h]
-				%INSERT FIGURE NAME HERE
-				\includegraphics[width=\linewidth]{../Diagrams/domainModel.jpg}
+				
+				\includegraphics[width=\linewidth]{../Diagrams/Domain Model/domainModel.jpg}
 				\caption{ Domain model - Classes related to each domain }
 			\end{figure}
 			
