Updated open issue description and updated pdf to latest version of tex

--- a/Documentation/SoftwareRequirements.tex
+++ b/Documentation/SoftwareRequirements.tex
@@ -1022,10 +1022,10 @@
 		
 	\cleardoublepage
 	\section{Open Issues}\label{sec:issues}
+	Issues that weren't discussed in the client requirements meeting:
 		\begin{itemize}
-		  \item The first item
-		  \item The second item
-		  \item The third etc \ldots
+		  \item 
+		  \item 
 		\end{itemize}
 		
 \end{document}
